--- a/index.html
+++ b/index.html
@@ -30,6 +30,20 @@
         <meta name=twitter:title content="Prashant Katiyar">
         <meta name=twitter:description content="I am **Prashant Katiyar**"><script type=application/ld+json>{"@context":"https://schema.org","@type":"Organization","name":"Prashant Katiyar","url":"https://www.prashantkatiyar.com/","description":"I am **Prashant Katiyar**","thumbnailUrl":"https://www.prashantkatiyar.com/prashant.png","sameAs":["https://www.linkedin.com/in/prashant-milan-katiyar/","https://twitter.com/kprashant__","prashant@cometlabs.in","https://medium.com/@kprashant","https://github.com/prashantkatiyar9777"]}</script>
 </head>
+
+
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-76R6T7WKG3"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-76R6T7WKG3');
+</script>
+
+
+
         <body class=list id=top><script>localStorage.getItem("pref-theme")==="dark"?document.body.classList.add("dark"):localStorage.getItem("pref-theme")==="light"?document.body.classList.remove("dark"):window.matchMedia("(prefers-color-scheme: dark)").matches&&document.body.classList.add("dark")</script>
                 <header class=header><nav class=nav><div class=logo>
                         <a href=https://www.prashantkatiyar.com/ accesskey=h title="k.prashant__ (Alt + H)">
